Доработки теста и DisplayObjectsControl.

--- a/Bwl.Imaging.Test/TestForm2.resx
+++ b/Bwl.Imaging.Test/TestForm2.resx
@@ -117,30 +117,24 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="Button1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Button2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="DisplayControl3.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="DisplayControl3.Bitmap" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAtIAAAByCAYAAAB+6TZtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAI3SURBVHhe7dYxAQAwEAOh+jedavibQQVvAADAmUgDAEAg
-        0gAAEIg0AAAEIg0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAA
-        EIg0AAAEIg0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0
-        AAAEIg0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAE
-        Ig0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0A
-        AIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFI
-        AwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBA
-        INIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBAINIA
-        ABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBAINIAABCI
-        NAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwDA2fYBnM5VAM3/
-        XMoAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAABIEAAAByCAYAAADEf8FlAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMLSURBVHhe7dgBAQAwDMOg+zfd+1hABm8AAAAAnCeBAAAA
+        AAIkEAAAAECABAIAAAAIkEAAAAAAARIIAAAAIEACAQAAAARIIAAAAIAACQQAAAAQIIEAAAAAAiQQAAAA
+        QIAEAgAAAAiQQAAAAAABEggAAAAgQAIBAAAABEggAAAAgAAJBAAAABAggQAAAAACJBAAAABAgAQCAAAA
+        CJBAAAAAAAESCAAAACBAAgEAAAAESCAAAACAAAkEAAAAECCBAAAAAAIkEAAAAECABAIAAAAIkEAAAAAA
+        ARIIAAAAIEACAQAAAARIIAAAAIAACQQAAAAQIIEAAAAAAiQQAAAAQIAEAgAAAAiQQAAAAAABEggAAAAg
+        QAIBAAAABEggAAAAgAAJBAAAABAggQAAAAACJBAAAABAgAQCAAAACJBAAAAAAAESCAAAACBAAgEAAAAE
+        SCAAAACAAAkEAAAAECCBAAAAAAIkEAAAAECABAIAAAAIkEAAAAAAARIIAAAAIEACAQAAAARIIAAAAIAA
+        CQQAAAAQIIEAAAAAAiQQAAAAQIAEAgAAAAiQQAAAAAABEggAAAAgQAIBAAAABEggAAAAgAAJBAAAABAg
+        gQAAAAACJBAAAABAgAQCAAAACJBAAAAAAAESCAAAACBAAgEAAAAESCAAAACAAAkEAAAAECCBAAAAAAIk
+        EAAAAECABAIAAAAIkEAAAAAAARIIAAAAIEACAQAAAARIIAAAAIAACQQAAAAQIIEAAAAAAiQQAAAAQIAE
+        AgAAAAiQQAAAAAABEggAAAAgQAIBAAAABEggAAAAgAAJBAAAABAggQAAAAACJBAAAABAgAQCAAAACJBA
+        AAAAAAESCAAAACBAAgEAAAAESCAAAACAAAkEAAAAECCBAAAAAAIkEAAAAECABAIAAAAIkEAAAAAAARII
+        AAAAIEACAQAAAARIIAAAAIAACQQAAAAQIIEAAAAAAiQQAAAAQIAEAgAAAAiQQAAAAAABEggAAAAgQAIB
+        AAAABEggAAAAgAAJBAAAABAggQAAAADO2z6TGjobhuXuIgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="DisplayControl3.MovePoints" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -155,30 +149,35 @@
         AAAABBVTeXN0ZW0uRHJhd2luZy5Qb2ludEYDAAAACw==
 </value>
   </data>
-  <metadata name="DisplayControl2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <data name="DisplayControl2.Bitmap" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAJQAAAGcCAYAAAA/GIkNAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAPqSURBVHhe7dIxAQAADMOg+TfdmcgJGrhBSChSQpESipRQ
-        pIQiJRQpoUgJRUooUkKREoqUUKSEIiUUKaFICUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQi
-        JRQpoUgJRUooUkKREoqUUKSEIiUUKaFICUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQp
-        oUgJRUooUkKREoqUUKSEIiUUKaFICUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJ
-        RUooUkKREoqUUKSEIiUUKaFICUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUoo
-        UkKREoqUUKSEIiUUKaFICUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKR
-        EoqUUKSEIiUUKaFICUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqU
-        UKSEIiUUKaFICUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSE
-        IiUUKaFICUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSEIiUU
-        KaFICUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSEIiUUKaFI
-        CUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSEIiUUKaFICUVK
-        KFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSEIiUUKaFICUVKKFJC
-        kRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSEIiUUKaFICUVKKFJCkRKK
-        lFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSEIiUUKaFICUVKKFJCkRKKlFCk
-        hCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSEIiUUKaFICUVKKFJCkRKKlFCkhCIl
-        FCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSEIiUUKaFICUVKKFJCkRKKlFCkhCIlFCmh
-        SAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSEIiUUKaFICUVKKFJCkRKKlFCkhCIlFCmhSAlF
-        SihSQpESitD28rM+3AgFkjMAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAZwAAAGcCAYAAADtQRY5AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAW6SURBVHhe7dUxAQAADMOg+TfducgFJrgBQEA4ACSEA0BC
+        OAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSE
+        A0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4
+        ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQD
+        QEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgA
+        JIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANA
+        QjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAk
+        hANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BC
+        OAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSE
+        A0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4
+        ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQD
+        QEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgA
+        JIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANA
+        QjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAk
+        hANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BC
+        OAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSE
+        A0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4
+        ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQD
+        QEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgA
+        JIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANA
+        QjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAk
+        hANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BC
+        OAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSE
+        A0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4
+        ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAkhANAQjgAJIQDQEI4ACSEA0BCOAAEtgf8R36PcEwK
+        0wAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="DisplayControl2.MovePoints" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -193,22 +192,19 @@
         AAAABBVTeXN0ZW0uRHJhd2luZy5Qb2ludEYDAAAACw==
 </value>
   </data>
-  <metadata name="DisplayControl1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <data name="DisplayControl1.Bitmap" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAtIAAABlCAYAAABgOgROAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAH+SURBVHhe7dYxAQAgDMAwNM2/BTQNDfTOEQ85c2cBAIA/
-        Ig0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0A
-        AIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFI
-        AwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBA
-        INIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBAINIA
-        ABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBAINIAABCI
-        NAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBAINIAABCINAAA
-        BCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBAINIAABCINAAABCIN
-        AACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBAINIAABCINAAAfJt996hB
-        Yh2YxcMAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAt8AAABlCAYAAACVxI/+AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAILSURBVHhe7dYxAQAgDMAwNM2/BTQNFfTKEQ85c2cBAID/
+        5BsAACLyDQAAEfkGAICIfAMAQES+AQAgIt8AABCRbwAAiMg3AABE5BsAACLyDQAAEfkGAICIfAMAQES+
+        AQAgIt8AABCRbwAAiMg3AABE5BsAACLyDQAAEfkGAICIfAMAQES+AQAgIt8AABCRbwAAiMg3AABE5BsA
+        ACLyDQAAEfkGAICIfAMAQES+AQAgIt8AABCRbwAAiMg3AABE5BsAACLyDQAAEfkGAICIfAMAQES+AQAg
+        It8AABCRbwAAiMg3AABE5BsAACLyDQAAEfkGAICIfAMAQES+AQAgIt8AABCRbwAAiMg3AABE5BsAACLy
+        DQAAEfkGAICIfAMAQES+AQAgIt8AABCRbwAAiMg3AABE5BsAACLyDQAAEfkGAICIfAMAQES+AQAgIt8A
+        ABCRbwAAiMg3AABE5BsAACLyDQAAEfkGAICIfAMAQES+AQAgIt8AABCRbwAAiMg3AABE5BsAACLyDQAA
+        EfkGAICIfAMAQES+AQAgIt8AABCRbwAAiMg3AABE5BsAACLyDQAAEfkGAICIfAMAQES+AQAgIt8AABCR
+        bwAAiMg3AABE5BsAACLyDQAAEfkGAICIfAMAQES+AQAgIt8AABCRbwAAiMg3AABE5BsAACLyDQAAEfkG
+        AICIfAMAQGL2AdqlejcNNfJrAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="DisplayControl1.MovePoints" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -223,13 +219,10 @@
         AAAABBVTeXN0ZW0uRHJhd2luZy5Qb2ludEYDAAAACw==
 </value>
   </data>
-  <metadata name="OverlayDisplay1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <data name="OverlayDisplay1.Bitmap" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAtIAAAExCAYAAABRUkUbAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANtSURBVHhe7cExAQAAAMKg9U9tCU8gAAAAAAAAAAAAAAAA
+        iVBORw0KGgoAAAANSUhEUgAAAt8AAAExCAYAAACkrM6rAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAN8SURBVHhe7cEBDQAAAMKg909tDjcgAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
@@ -244,10 +237,7 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AOClBnK8AAEv42QnAAAAAElFTkSuQmCC
+        AAAAAAAAAAAAAAAAAAAAAIB/NbCwAAHiHnWTAAAAAElFTkSuQmCC
 </value>
   </data>
-  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
 </root>
