--- a/Bwl.Imaging.UnitTests/My Project/Resources.resx
+++ b/Bwl.Imaging.UnitTests/My Project/Resources.resx
@@ -145,4 +145,10 @@
   <data name="rgb" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\636080817147998076.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="jpeg24bpp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\jpeg24bpp.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="jpeg8bpp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\jpeg8bpp.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
